[gd_scene load_steps=6 format=3 uid="uid://biywwpmrrlmkt"]

[ext_resource type="Script" uid="uid://cx8l44cabpkfd" path="res://controllers/raycast_bike.gd" id="1_o3rlb"]
[ext_resource type="PackedScene" uid="uid://jkx452hmhinf" path="res://controllers/raycast_wheel.tscn" id="2_fj8lr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o2qf1"]
height = 2.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o2qf1"]
height = 2.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fj8lr"]
radius = 0.25
height = 2.5

[node name="RaycastBike" type="RigidBody3D"]
collision_layer = 32
collision_mask = 37
script = ExtResource("1_o3rlb")

[node name="col body upper" type="CollisionShape3D" parent="."]
transform = Transform3D(3.55271e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 1, -1)
shape = SubResource("CapsuleShape3D_o2qf1")

[node name="mesh body" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.77636e-15, 4.37114e-08, -1, 1, 2.98023e-08, 0, 2.98023e-08, -1, -4.37114e-08, 0, 1, -1)
mesh = SubResource("CapsuleMesh_o2qf1")
skeleton = NodePath("")

[node name="player_remote_transform" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
update_scale = false

[node name="wheel_back" parent="." instance=ExtResource("2_fj8lr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 0.5, 0)

[node name="wheel_front" parent="." instance=ExtResource("2_fj8lr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 0.5, -2)

[node name="wheel_back2" parent="." instance=ExtResource("2_fj8lr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 0.5, 0)

[node name="wheel_front2" parent="." instance=ExtResource("2_fj8lr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 0.5, -2)

[node name="collider back" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_fj8lr")

[node name="collider front" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.5, -2)
shape = SubResource("CapsuleShape3D_fj8lr")
